<resources>
    <string name="app_name">Award</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in_wording">Enter your email address \nto sign in and continue</string>
    <string name="award">AWARD</string>
    <string name="wording_add_email">Email belum terdaftar</string>
    <string name="add_email">Daftarkan</string>
    <string name="success_add_email">Email Berhasil ditambahakan</string>
    <string name="success_login">Login Berhasil..</string>
    <string name="point_needed">Point Needed</string>
    <string name="filter">Filter</string>
    <string name="others">Others</string>
    <string name="products">Products</string>
    <string name="vouchers">Vouchers</string>
    <string name="all_type">All Type</string>
    <string name="awards_type">Awards Type</string>
    <string name="clear_all_filter">Clear All Filter</string>
    <string name="awards_menu">Awards Menu</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="logging_in">Logging in…</string>
    <string name="empty_email">Email cannot empty</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="process_logout">Logging out…</string>
</resources>
