<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/colorWhite"
        android:paddingStart="@dimen/dimens_30dp"
        android:paddingEnd="@dimen/dimens_30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimens_150dp"
            android:layout_height="@dimen/dimens_150dp"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/award"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:text="@string/sign_in_wording"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50dp"
            android:hint="@string/email_address"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:paddingStart="@dimen/dimens_20dp"
            android:paddingEnd="@dimen/dimens_20dp"
            android:id="@+id/etEMailAddress"
            android:inputType="textEmailAddress"
            android:background="@drawable/stroke_light_grey"
            android:textColor="@color/darkGrey"/>

        <Button
            android:layout_width="@dimen/dimens_150dp"
            android:layout_height="@dimen/dimens_40dp"
            android:text="@string/sign_in"
            android:background="@drawable/small_rounded_dark_grey"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:id="@+id/btnSignIn"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>